--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react": "17.0.2",
     "react-native": "0.66.4",
     "react-native-check-box": "^2.1.7",
-    "react-native-table-component": "^1.2.1"
+    "react-native-cli": "^2.0.1",
+    "react-native-table-component": "^1.2.1",
+    "react-native-vector-icons": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
